--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,4 @@
-tftpd-openbsd_user: tftpd-openbsd
-tftpd-openbsd_group: tftpd-openbsd
-tftpd-openbsd_log_dir: /var/log/tftpd-openbsd
-tftpd-openbsd_db_dir: "{{ __tftpd-openbsd_db_dir }}"
-tftpd-openbsd_service: tftpd-openbsd
-tftpd-openbsd_conf_dir: "{{ __tftpd-openbsd_conf_dir }}"
-tftpd-openbsd_conf_file: "{{ __tftpd-openbsd_conf_dir }}/tftpd-openbsd.conf"
-tftpd-openbsd_flags: ""
+tftpd_openbsd_user: _tftpd
+tftpd_openbsd_group: _tftpd
+tftpd_openbsd_service: tftpd
+tftpd_openbsd_flags: ""
