--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,18 +1,18 @@
 ---
 galaxy_info:
   author: Tomoyuki Sakurai
-  description: Configures something
-  company: Reallyenglish
+  description: Manage tftpd(8) from OpenBSD
+  company: N/A
   license: BSD
   min_ansible_version: 2.0
   platforms:
   - name: FreeBSD
     versions:
-    - 10.3
-#  - name: OpenBSD
-#    versions:
-#    - 6.0
-#    - 6.1
+#    - 10.3
+  - name: OpenBSD
+    versions:
+    - 6.1
+    - 6.2
 #  - name: Ubuntu
 #    versions:
 #    - trusty
@@ -22,6 +22,7 @@ galaxy_info:
 #    - 7
 
   galaxy_tags:
-    - system
+    - tftpd
+    - openbsd
 #dependencies:
 #  - foo.role
