--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,23 +6,10 @@ galaxy_info:
   license: BSD
   min_ansible_version: 2.0
   platforms:
-# - name: FreeBSD
-#   versions:
-#    - 10.3
-  - name: OpenBSD
-    versions:
-    - 6.1
-    - 6.2
-#  - name: Ubuntu
-#    versions:
-#    - trusty
-#    - xenial
-#  - name: EL
-#    versions:
-#    - 7
-
+    - name: OpenBSD
+      versions:
+        - 6.7
   galaxy_tags:
     - tftpd
     - openbsd
-#dependencies:
-#  - foo.role
+dependencies: []
