--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -21,9 +21,19 @@ provisioner:
     - filter_plugins
 
 platforms:
-  - name: openbsd-6.7-amd64
+  - name: openbsd-6.8-amd64
     driver:
-      box: trombik/ansible-openbsd-6.7-amd64
+      box: trombik/ansible-openbsd-6.8-amd64
+      box_check_update: false
+    driver_config:
+      ssh:
+        shell: '/bin/sh'
+    provisioner:
+      extra_vars:
+        ansible_python_interpreter: '/usr/local/bin/python'
+  - name: openbsd-6.9-amd64
+    driver:
+      box: trombik/ansible-openbsd-6.9-amd64
       box_check_update: false
     driver_config:
       ssh:
